[package]
name = "robonomics-parachain"
version = "0.0.0"
authors = [ "Airalab <research@aira.life>" ]
description = "Experimental Robonomics network parachain"

[dependencies]
polkadot-parachain = { git = "https://github.com/akru/polkadot", branch = "v0.3.20", default-features = false }
parity-codec = { version = "2.1", default-features = false }
parity-codec-derive = { version = "2.1", default-features = false }
tiny-keccak = "^1.4"
